--- a/style.css
+++ b/style.css
@@ -18,13 +18,16 @@ img {
     background-repeat: no-repeat;
     background-position: center fixed;
     margin: auto;
-    padding: 0 15rem;
+    padding: 0 17.5rem;
 }
 
 #stage img:nth-of-type(1) {
-    animation-name: fader;
-    animation-delay: 4s;
-    animation-duration: 1s;
+    animation-name: fadeIn;
+    animation-delay: 2.5s;
+    animation-duration: 3s;
+    animation-name: fadeOut;
+    animation-delay: 6s;
+    animation-duration: 2s;
     z-index: 20;
   }
   #stage img:nth-of-type(2) {
@@ -34,7 +37,12 @@ img {
   #stage img:nth-of-type(n+3) {
     display: none;
   }
-@keyframes fader {
-    from { opacity: 1.0; }
-    to   { opacity: 0.0; }
-  }
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+@keyframes fadeOut {
+    0% { opacity: 1.0; }
+    100% { opacity: 0.0; }
+}
